# sol-test

./: .env.example  .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: depository.rs  get_balances.rs  geyser.rs  main.rs  prepare.rs  transfer.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
program/src/tests/: mtree.rs
