cargo-features = ["edition2024"]

[package]
name = "mtree-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
borsh = "1.5.7"
clap = { version = "*", features = ["derive"] }
dotenv = "0.15.0"
futures = "*"
serde = "*"
serde_derive = "*"
serde_yaml = "*"
solana-client = "2.2.1"
solana-program = "2.2.1"
solana-sdk = "2.2.2"
solana-transaction-status-client-types = "2.2.1"
tokio = "*"
