cargo-features = ["edition2024"]

[package]
name = "program"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
hex = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "2.2.1"
thiserror = "2.0.12"

[dev-dependencies]
solana-program-test = "2.2.7"
solana-sdk = "2.2.2"
tokio = "1.44.2"
